[tool.poetry]
name = "repl_python3_PYPI-BraveWryCubase-1"
version = "0.1.0"
description = ""
authors = ["transcriptor <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-chess = "^1.999"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"