[tool.poetry]
name = "MATEU"
version = "0.1.0"
description = "A fast chess library for chess engines development including an interface to play games with easy, efficient and short controls, simple piece-value evaluation, and a compressed python version of Mateu Chess Engine. Hoping to be able to add engine features and an implementation of pygame or tkinter to make the game easier to play."
authors = ["Holger-Velisky (Katronka, Albert Mateu Carrasco, @transcriptor)"]

[tool.poetry.dependencies]
python = "^3.8"
python-chess = "^1.999"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"